[package]
name = "bench-kernel"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = "0.0.2"
riscv = "0.9.0"
uart_16550 = "0.2"
rcore-console = "0.0.0"
