[package]
name = "legacy-console-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = "0.0.2"
riscv = "0.9.0"
r0 = "1"
uart_16550 = "0.2"

console = { git = "https://github.com/YdrMaster/rCore-Tutorial-in-single-workspace" }
