[package]
name = "rustsbi-qemu"
description = "RustSBI support package for QEMU"
version = "0.2.0-alpha.2"
authors = [
    "Luo Jia <me@luojia.cc>",
    "YdrMaster <ydrmaster@hotmail.com>",
    "Campbell He <hkp18@mails.tsinghua.edu.cn>",
    "Yifan Wu <shinbokuow@163.com>",
]
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = "0.3.0"
sbi-spec = { version = "0.0.4", features = ["legacy"] }
riscv = "0.9.0"
spin = "0.9"
r0 = "1"
uart_16550 = "0.2"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
qemu-exit = "3.0"

hsm-cell = { path = "../hsm-cell" }
riscv-aclint = { git = "https://github.com/YdrMaster/riscv-aclint" }
fast-trap = { git = "https://github.com/YdrMaster/fast-trap", rev = "ffb40e2", features = [
    "riscv-m",
] }
