[package]
name = "rustsbi-qemu"
description = "RustSBI support package for QEMU"
version = "0.2.0-alpha.3"
authors = [
    "Luo Jia <me@luojia.cc>",
    "YdrMaster <ydrmaster@hotmail.com>",
    "Campbell He <hkp18@mails.tsinghua.edu.cn>",
    "Yifan Wu <shinbokuow@163.com>",
]
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { git = "https://github.com/rustsbi/rustsbi", rev = "4c40cd", features = [
    "machine",
] }
sbi-spec = { version = "0.0.7-alpha.3", features = ["legacy"] }
riscv = "0.10.1"
spin = "0.9"
rcore-console = "0.0.0"
aclint = "0.0.0"
sifive-test-device = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
uart16550 = "0.0.1"

hsm-cell = { path = "../hsm-cell" }
fast-trap = { version = "=0.0.1", features = ["riscv-m"] }
