[package]
name = "test-kernel"
version = "0.2.0"
authors = ["Luo Jia <me@luojia.cc>", "YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-testing = { version = "0.0.1", features = ["log"] }
log = "0.4.17"
riscv = "0.9.0"
spin = "0.9"
r0 = "1"
uart_16550 = "0.2"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
