[package]
name = "test-kernel"
version = "0.2.0"
authors = ["Luo Jia <me@luojia.cc>", "YdrMaster <ydrml@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-testing = { version = "0.0.3-alpha.2", features = ["log"] }
log = "0.4"
riscv = "0.10.1"
spin = "0.9"
uart16550 = "0.0.1"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"
