[package]
name = "xtask"
version = "0.2.0"
authors = ["Luo Jia <me@luojia.cc>", "YdrMaster <ydrml@hotmail.com>"]
description = "Interactive cargo runner, to build, analyze and test RustSBI-Qemu."
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.1", features = ["derive"] }
lazy_static = "1.4"
command-ext = { git = "https://github.com/YdrMaster/command-ext.git", rev = "f25befb" }
