[package]
name = "xtask"
version = "0.2.0"
authors = ["Luo Jia <me@luojia.cc>", "YdrMaster <ydrml@hotmail.com>"]
description = "Interactive cargo runner, to build, analyze and test RustSBI-Qemu."
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
os-xtask-utils = "0.0.0"
once_cell = "1.16"
